@@ -1,12 +1,13 @@
 package lesson7.hospital;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class HeartTreatment extends Treatment {
 
     @Override
     public List<String> getPills() {
-        return List.of(
+        return Arrays.asList(
                 "Валидол",
                 "Карвалол",
                 "Лизиноприл",
